# footballscore

./: Cargo.toml  Makefile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
benches/: footballscore_benchmark.rs
config/: config.env
i3wm/: footballscore-info.sh  popup-football.sh
resource/: fixtures.json
scripts/: Dockerfile  build_docker.sh  build_package.sh  setup.sh
src/: config.rs  error.rs  football_api.rs  football_data.rs  football_fixtures_data.rs  football_opts.rs  football_teams_data.rs  lib.rs  main.rs
tests/: cli.rs
tests/config/: config.env
tests/resource/: teams.json
