[package]
name = "footballscore"
version = "0.2.6"
edition = "2021"
license-file = "LICENSE"
description = "a CLI tool to retrieve football score from api-football.com"
homepage = "https://github.com/nubilfi/footballscore"
documentation = "https://docs.rs/footballscore/latest/footballscore"
repository = "https://github.com/nubilfi/footballscore"
keywords = ["FOOTBALL", "SCORE", "CLI"]
readme = "README.md"
exclude = [
  ".github/*",
  ".gitignore",
  ".scripts/*.sh",
  "Dockerfile*",
  "Makefile",
  "i3wm/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"], optional = true }
dirs = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
log = "0.4.20"
parking_lot = "0.12.1"
reqwest = { version = "0.12.5", features = [
  "json",
  "rustls-tls",
  "gzip",
], default-features = false, optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stack-string = { version = "1.1.3", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.34.0", features = ["full"], optional = true }
url = "2.5.0"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }


[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.8.1"

[features]
default = ["cli", "stackstring"]
cli = ["reqwest", "tokio", "clap"]
stackstring = ["stack-string"]

[[bin]]
name = "footballscore"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{version}-{target}.tar.gz"
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"

[[bench]]
name = "footballscore_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

